# term-x

./: .gitignore  README.md  __init__.py  install.sh  main.py  pyproject.toml  requirements.txt  run.sh
apps/home/: config.yaml  view.py
apps/notes/: config.yaml  view.py
apps/todo/: config.yaml  view.py
core/: app.py  storage.py  terminal.py
