[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "term-x"
version = "1.0.0"
description = "A Python terminal application with simple app building blocks"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "textual>=0.47.0",
    "pyyaml>=6.0",
]

[project.scripts]
term-x = "main:main"
